// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<ChangePassword /> should render 1`] = `
<Box__BoxGroup>
  <Box__BoxGroupHeader>
    <h2>
      Password
    </h2>
  </Box__BoxGroupHeader>
  <Box__BoxGroupSection
    as="form"
    onSubmit={[Function]}
  >
    <InputGroup>
      <Input__InputLabel>
        Old Password
      </Input__InputLabel>
      <Input__InputContainer>
        <PasswordInput
          name="oldPassword"
          onChange={[Function]}
          value=""
        />
        <Input__InputError />
      </Input__InputContainer>
    </InputGroup>
    <InputGroup>
      <Input__InputLabel>
        New password
      </Input__InputLabel>
      <Input__InputContainer>
        <PasswordInput
          name="newPassword"
          onChange={[Function]}
          value=""
        />
        <Input__InputError />
      </Input__InputContainer>
    </InputGroup>
    <Password__ChangePasswordFooter>
      <span>
        Last changed 
        <RelativeTime
          time="2018-02-14T12:00:00.000000Z"
        />
      </span>
      <SaveButton
        altText="Change"
      />
    </Password__ChangePasswordFooter>
  </Box__BoxGroupSection>
</Box__BoxGroup>
`;

exports[`<ChangePassword /> should render placeholder when [props.ready=false] 1`] = `<LoadingPlaceholder />`;

exports[`<ChangePassword /> should render with error in props 1`] = `
<Box__BoxGroup>
  <Box__BoxGroupHeader>
    <h2>
      Password
    </h2>
  </Box__BoxGroupHeader>
  <Box__BoxGroupSection
    as="form"
    onSubmit={[Function]}
  >
    <InputGroup>
      <Input__InputLabel>
        Old Password
      </Input__InputLabel>
      <Input__InputContainer>
        <PasswordInput
          name="oldPassword"
          onChange={[Function]}
          value=""
        />
        <Input__InputError>
          existing error
        </Input__InputError>
      </Input__InputContainer>
    </InputGroup>
    <InputGroup>
      <Input__InputLabel>
        New password
      </Input__InputLabel>
      <Input__InputContainer>
        <PasswordInput
          name="newPassword"
          onChange={[Function]}
          value=""
        />
        <Input__InputError />
      </Input__InputContainer>
    </InputGroup>
    <Password__ChangePasswordFooter>
      <span>
        Last changed 
        <RelativeTime
          time="2018-02-14T12:00:00.000000Z"
        />
      </span>
      <SaveButton
        altText="Change"
      />
    </Password__ChangePasswordFooter>
  </Box__BoxGroupSection>
</Box__BoxGroup>
`;

exports[`<ChangePassword /> should show error if submitted old password is empty 1`] = `
<Box__BoxGroup>
  <Box__BoxGroupHeader>
    <h2>
      Password
    </h2>
  </Box__BoxGroupHeader>
  <Box__BoxGroupSection
    as="form"
    onSubmit={[Function]}
  >
    <InputGroup>
      <Input__InputLabel>
        Old Password
      </Input__InputLabel>
      <Input__InputContainer>
        <PasswordInput
          name="oldPassword"
          onChange={[Function]}
          value=""
        />
        <Input__InputError>
          Please provide your old password
        </Input__InputError>
      </Input__InputContainer>
    </InputGroup>
    <InputGroup>
      <Input__InputLabel>
        New password
      </Input__InputLabel>
      <Input__InputContainer>
        <PasswordInput
          name="newPassword"
          onChange={[Function]}
          value="new_password"
        />
        <Input__InputError />
      </Input__InputContainer>
    </InputGroup>
    <Password__ChangePasswordFooter>
      <span>
        Last changed 
        <RelativeTime
          time="2018-02-14T12:00:00.000000Z"
        />
      </span>
      <SaveButton
        altText="Change"
      />
    </Password__ChangePasswordFooter>
  </Box__BoxGroupSection>
</Box__BoxGroup>
`;

exports[`<ChangePassword /> should show error if submitted password is too short 1`] = `
<Box__BoxGroup>
  <Box__BoxGroupHeader>
    <h2>
      Password
    </h2>
  </Box__BoxGroupHeader>
  <Box__BoxGroupSection
    as="form"
    onSubmit={[Function]}
  >
    <InputGroup>
      <Input__InputLabel>
        Old Password
      </Input__InputLabel>
      <Input__InputContainer>
        <PasswordInput
          name="oldPassword"
          onChange={[Function]}
          value="old_password"
        />
        <Input__InputError />
      </Input__InputContainer>
    </InputGroup>
    <InputGroup>
      <Input__InputLabel>
        New password
      </Input__InputLabel>
      <Input__InputContainer>
        <PasswordInput
          name="newPassword"
          onChange={[Function]}
          value="short"
        />
        <Input__InputError>
          Passwords must contain at least 8 characters
        </Input__InputError>
      </Input__InputContainer>
    </InputGroup>
    <Password__ChangePasswordFooter>
      <span>
        Last changed 
        <RelativeTime
          time="2018-02-14T12:00:00.000000Z"
        />
      </span>
      <SaveButton
        altText="Change"
      />
    </Password__ChangePasswordFooter>
  </Box__BoxGroupSection>
</Box__BoxGroup>
`;
